--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,21 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="primaryColor">#4fc3f7</color>
+
+    <color name="primaryLightColor">#8bf6ff</color>
+
+    <color name="primaryDarkColor">#0093c4</color>
+
+    <color name="secondaryColor">#1976d2</color>
+
+    <color name="secondaryLightColor">#63a4ff</color>
+
+    <color name="secondaryDarkColor">#004ba0</color>
+
+    <color name="primaryTextColor">#000000</color>
+
+    <color name="secondaryTextColor">#ffffff</color>
 </resources>
